--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -20,6 +20,6 @@ services:
         environment:
             - BACKEND_URL=http://backend:80/api/judge_server_heartbeat
             - SERVICE_URL=http://judge-server:12358
-            - TOKEN=YOUR_TOKEN_HERE
+            - TOKEN=CHANGE_THIS
         ports:
             - "0.0.0.0:12358:8080"
